[project]
name = "hellobooksautobuy"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "bs4>=0.0.2",
    "google-api-python-client>=2.162.0",
    "google-auth-httplib2>=0.2.0",
    "google-auth-oauthlib>=1.2.1",
    "lxml>=5.3.1",
    "python-dotenv>=1.0.1",
    "selenium>=4.29.0",
]

[dependency-groups]
dev = [
    "ruff>=0.9.9",
]
